--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <title>Akan Name Generator</title>
-    <link rel="stylesheet" href="css/style.css" media="all" />
+    <link rel="stylesheet" href="public/css/style.css" media="all" />
     <link
       href="https://fonts.googleapis.com/css?family=Quicksand&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="images/ghana.png" type="img/jpg" />
+    <link rel="icon" href="public/images/ghana.jfif" type="img/jpg" />
   </head>
   <body>
     <div class="content">
